--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,14 @@ layout: layout
 </div>
 {% for post in site.posts offset: 0 limit: 50 %}
 <div class="row">
+	  <div class="col-md-3">
+        <a href="{{ post.url }}" >
+            <img border="0" width="250" height="150" src="/img/posts/{{ post.image }}" alt="{{ post.image }}">
+        </a>
+      </div>
+	  <div class="col-md-8">
+		{% include post_items.html %}
+      </div>
 </div>
 <hr/>
 {% endfor %}
