--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: layout
 ---
+<!-- { include social_plugins.js } -->
 <div class="row">
 	<div class="col-lg-12"><h3 class="page-header"></h3>
 	</div>
@@ -9,7 +10,7 @@ layout: layout
 <div class="row">
 	  <div class="col-md-3">
         <a href="{{ post.url }}" >
-            <img border="0" width="250" height="150" src="/img/posts/{{ post.image }}" alt="{{ post.image }}">
+            <br/><img border="0" width="250" height="150" src="/img/posts/{{ post.image }}" alt="{{ post.image }}">
         </a>
       </div>
 	  <div class="col-md-8">
