Add landing page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,204 @@
 ---
 layout: layout
 ---
-        <div class="row">
-        </div>
+<div class="row">
+<br/>
+<center>
+<h1><font size="200%">WHY USE US</font></h1>
+</center>
+<br/>
+</div>
+<div class="row">
+	<div class="col-md-1"></div>
+	<div class="col-md-10">
+	<center>
+	We develop superfast ad-hoc analytical database that allows smooth exploration of your business.
+	We are 10 times faster than other databases and at the same time we can serve many more concurrent users.
+	That's because of our unique know-how and long experience in business intelligence Saas industry.
+	</center><br/>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<center><img src="img/everyone.png" class="img-responsive" alt="everyone" width="131" height="88">
+		<h3>everyone can explore</h3>
+		</center><br/>
+	</div>
+	<div class="col-md-4">
+		<center><img src="img/fast.png" class="img-responsive" alt="superfast" width="142" height="88">
+		<h3>superfast</h3>
+		</center><br/>
+	</div>
+	<div class="col-md-4">
+		<center><img src="img/flexible.png" class="img-responsive" alt="flexible" width="365" height="88">
+		<h3>flexible</h3>
+		</center><br/>
+	</div>
+</div>
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+<div class="row">
+<center>
+<h1><font size="200%">HOW IT WORKS</font></h1>
+</center>
+<br/>
+</div>
+<div class="row">
+	<div class="col-md-4">
+		<center>
+		<img src="img/integrate.png" class="img-responsive" alt="Integrate">
+		<h3>integrate</h3>
+		</center>
+	</div>
+	<div class="col-md-4">
+		<center>
+		<img src="img/dashboard.png" class="img-responsive" alt="Insights">
+		<h3>add insights</h3>
+		</center>
+	</div>
+	<div class="col-md-4">
+		<center>
+		<img src="img/glass.png" class="img-responsive" alt="Explore">
+		<h3>explore</h3>
+		</center>
+	</div>
+</div>
+<!-- Retail Insights
+How it works. Website with a lot of structured data and a lot of users.
+You want to attract more visitors and provide them insights into your business.
+Attract more visitors.
+Grow your customer base
+<p>You can add <i>custom</i> and <i>interactive analytics</i>. You
+can serve big amount of data and high number of concurrent users at the same time.
+Analytics for websites with high traffic.
+-->
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+<div class="row">
+	<div class="col-md-8"><h1><font size="200%">INTERACTIVE RETAIL ANALYTICS</font></h1>
+		<p><i>By using our solution, you can make your public data being explored by your potential
+		customers. Customers love exploring data of their interest because it helps them to make
+		the right choice.
+		</i></p>
+	</div>
+	<div class="col-md-1"></div>
+	<div class="col-md-4">
+		<br/><center><img src="img/mustang.png" class="img-responsive" alt="car" width="200" height="92"></center>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-4">
+	<p>For instance, you have a website with used cars. It has over 100000 cars for sale
+	and million records of sold cars history. It is visited by thousands of potential customers a day.
+	Typical example is e.g. the autotrader.co.uk website.
+	It has over 410000 cars available and more than 14 million
+	unique visitors per month. That equals, on average, 460000 visitors/day and 5 visitors/second.
+	</p>
+	</div>
+	<div class="col-md-4">
+	<h2>Attract Your Visitors</h2>
+	<p>Many of your customers or visitors would like to see an average price of certain car based on mileage
+	and the car age.
+	Or based on the region.
+	<img src="img/chart.png" class="img-responsive" alt="chart" width="180" height="180" align="right">
+	Or a percentage of cars sold in the last
+	year based on the producer. Or you choose.
+	</p>
+	</div>
+	<div class="col-md-4">
+	<p>
+	<h2>Stay Ahead of the Competitors</h2>
+	Not only you can add these graphs. Use our technology and you can add <b>interactive charts</b>.
+	They allow your potential customers to <b>change dynamically</b> criteria
+	in accordance with their preference. Add these charts and you will be ahead of your competition.
+	</p>
+	</div>
+</div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <h3 class="page-footer"></h3>
-            </div>
-        </div>
+<section id="TECHNOLOGY">
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+<div class="row">
+	<div class="col-md-8"><h1><font size="200%">TECHNOLOGY</font></h1>
+		<p><i>Our core product is MIA DB (multi-user interactive analytic database). By design it's in-memory scalable
+		columnar OLAP database suitable for the cloud environments.
+		There are <b>minimum hardware requirements</b> and it can run
+		on any <b>common x86-64 compatible</b> server.</i></p>
+	</div>
+	<div class="col-md-4"><br/><center><img class="img-responsive" src="img/RAM.png" alt="RAM" width="200" height="134"></center></div>
+</div>
+<div class="row">
+	<center>
+	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5" role="button">
+	<span class="glyphicon glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts Demo</a>
+	</center>
+	<div class="col-md-4">
+		<h2>Low Latency &amp; High Throughput</h2>
+		<p>MIA DB uses the best <b>features</b> of the <b>new generation</b> OLAP databases
+		e.g. lock-free and columnar architecture, compression, vector operations.
+		More importantly it is <b>optimized</b> for <b>high throughput and low latency</b> which requires
+		very different architecture. For this purpose, we combined concepts from outside
+		world ( e.g. Git, Dropbox, Erlang ) with our previous experience in OLAP industry.
+		E.g. on ordinary laptop, we can serve up to 1200 requests/sec.
+		</p>
+	</div>
+	<div class="col-md-4">
+		<h2>Microcaching</h2>
+		<p>
+		Our main technological difference is <b>automatic microcaching</b>.
+		It increases throughput for concurrent users several times comparing
+		to traditional databases and allows to minimize
+		the latencies for the vast majority of user requests.
+		This is especially important for the usage in the <b>cloud</b> environments.
+		And for the <b>interactive</b> user experience.
+		Microcaching also slightly simplifies UI client and API by
+		allowing the client to make <b>synchronous requests only</b>.
+		</p>
+	</div>
+	<div class="col-md-4">
+		<h2>Flexible & Affordable</h2>
+		<p>High throughput and low latency allow to <b>simplify the overall architecture</b>
+		of the <b>whole OLAP system</b>. You can avoid custom layers of specialized caches
+		which are necessary for fast system. Custom caches make the <b>architecture complex,
+		weaken the flexibility</b> of the system and <b>remarkably increases the total cost</b> of the solution.
+		MIA DB works on common hardware and decreases implementation and operating cost.
+		</p>
+	</div>
+</div>
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+</section>
+
+<section id="CONTACT">
+<div class="row">
+	<div class="col-md-4">
+	<center>
+		<h1>CONTACT US</h1>
+		<h3><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+		ask&commat;<img src="img/logo-s.png" alt="briskat" style="padding-bottom: 11px" width="110" height="58">.com
+		</h3>
+		<hr/>
+		<p>
+		<a href="https://www.twitter.com/thebriskat"><img src="img/twitter.png" alt="Briskat Twitter" width="30" height="30"></a>
+		<a href="https://www.linkedin.com/company/briskat"><img src="img/linkedin.png" alt="Briskat LinkedIn" width="30" height="30"></a>
+		&nbsp;<a href="https://www.youtube.com/user/thebriskat"><img src="img/youtube.png" alt="Briskat YouTube" width="72" height="30"></a>
+		</p>
+		<hr/>
+	</center>
+	</div>
+	<div class="col-md-8">
+		<center><h1>FOUNDERS</h1></center>
+	<div class="col-md-6">
+	<center><h2>
+	<a href="https://www.linkedin.com/pub/vladimir-makovsky/2a/141/141"><img src="img/linkedin.png" alt="Vlada" width="20" height="20"></a>
+	Vladimir Makovsky<small>, CEO</small></h2>
+	<img class="img-responsive" src="img/vlada.png" alt="Vlada" width="170" height="222"><br/>
+	</center>
+	</div>
+	<div class="col-md-6">
+	<center><h2>
+	<a href="https://www.linkedin.com/in/hynekvychodil"><img src="img/linkedin.png" alt="Hynek" width="20" height="20"></a>
+	Hynek Vychodil<small>, CTO</small></h2><img class="img-responsive" src="img/hynek.png" alt="Hynek" width="183" height="225"><br/>
+	</center>
+	</div>
+	</div>
+</div>
+</section>
+
+<div class="row"><div class="col-lg-12"><h3 class="page-footer"></h3></div></div>
