--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 ---
 layout: layout
 ---
-<div class="row">
+
 <br/>
-<center>
-<h1><font size="200%">WHY USE US</font></h1>
-</center>
-<br/>
-</div>
 <div class="row">
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
-	<center>
-	We develop superfast ad-hoc analytical database that allows smooth exploration of your business.
-	We are 10 times faster than other databases and at the same time we can serve many more concurrent users.
-	That's because of our unique know-how and long experience in business intelligence Saas industry.
-	</center><br/>
 	</div>
+</div>
+<div class="row">
+<center>
+<h1><font size="200%">TURN YOUR DATA INTO KNOWLEDGE</font></h1>
+	<center>
+	Even small companies can now use the benefits of highly sophisticated analytics to empower their business.<br/> And they can also give an extra knowledge to their online users coming on their site in millions.
+	</center><br/>
+</center>
+<br/>
 </div>
 <div class="row">
 	<div class="col-md-4">
@@ -71,64 +70,24 @@ Grow your customer base
 can serve big amount of data and high number of concurrent users at the same time.
 Analytics for websites with high traffic.
 -->
-<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
-<div class="row">
-	<div class="col-md-8"><h1><font size="200%">INTERACTIVE RETAIL ANALYTICS</font></h1>
-		<p><i>By using our solution, you can make your public data being explored by your potential
-		customers. Customers love exploring data of their interest because it helps them to make
-		the right choice.
-		</i></p>
-	</div>
-	<div class="col-md-1"></div>
-	<div class="col-md-4">
-		<br/><center><img src="img/mustang.png" class="img-responsive" alt="car" width="200" height="92"></center>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-4">
-	<p>For instance, you have a website with used cars. It has over 100000 cars for sale
-	and million records of sold cars history. It is visited by thousands of potential customers a day.
-	Typical example is e.g. the autotrader.co.uk website.
-	It has over 410000 cars available and more than 14 million
-	unique visitors per month. That equals, on average, 460000 visitors/day and 5 visitors/second.
-	</p>
-	</div>
-	<div class="col-md-4">
-	<h2>Attract Your Visitors</h2>
-	<p>Many of your customers or visitors would like to see an average price of certain car based on mileage
-	and the car age.
-	Or based on the region.
-	<img src="img/chart.png" class="img-responsive" alt="chart" width="180" height="180" align="right">
-	Or a percentage of cars sold in the last
-	year based on the producer. Or you choose.
-	</p>
-	</div>
-	<div class="col-md-4">
-	<p>
-	<h2>Stay Ahead of the Competitors</h2>
-	Not only you can add these graphs. Use our technology and you can add <b>interactive charts</b>.
-	They allow your potential customers to <b>change dynamically</b> criteria
-	in accordance with their preference. Add these charts and you will be ahead of your competition.
-	</p>
-	</div>
-</div>
-
+<br/>
 <section id="TECHNOLOGY">
-<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
 <div class="row">
-	<div class="col-md-8"><h1><font size="200%">TECHNOLOGY</font></h1>
+	<div class="col-md-12">
+		<center><h1><font size="200%">TECHNOLOGY</font></h1></center>
+	</div>
+</div>
+</section>
+<div class="row">
+	<div class="col-md-8">
 		<p><i>Our core product is MIA DB (multi-user interactive analytic database). By design it's in-memory scalable
-		columnar OLAP database suitable for the cloud environments.
+		columnar OLAP database suitable for the <b>cloud environments</b>.
 		There are <b>minimum hardware requirements</b> and it can run
 		on any <b>common x86-64 compatible</b> server.</i></p>
 	</div>
 	<div class="col-md-4"><br/><center><img class="img-responsive" src="img/RAM.png" alt="RAM" width="200" height="134"></center></div>
 </div>
 <div class="row">
-	<center>
-	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5" role="button">
-	<span class="glyphicon glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts Demo</a>
-	</center>
 	<div class="col-md-4">
 		<h2>Low Latency &amp; High Throughput</h2>
 		<p>MIA DB uses the best <b>features</b> of the <b>new generation</b> OLAP databases
@@ -162,8 +121,14 @@ Analytics for websites with high traffic.
 		</p>
 	</div>
 </div>
+
+<div class="row">
+	<center>
+	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5" role="button">
+	<span class="glyphicon glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts Demo</a>
+	</center>
+</div>
 <div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
-</section>
 
 <section id="CONTACT">
 <div class="row">
