--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ Analytics for websites with high traffic.
 
 <div class="row">
 	<center>
-	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5" role="button">
-	<span class="glyphicon glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts Demo</a>
+	<a class="btn btn-info btn-lg" href="http://www.briskat.com/blog.html" role="button">
+	<span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Read Our Blog </a>
 	</center>
 </div>
 <div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
