Adjust image size in blog list

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ layout: layout
 <div class="row">
 	  <div class="col-md-3">
         <a href="{{ post.url }}" >
-            <img border="0" width="250" height="150" src="/img/posts/{{ post.image }}" alt="{{ post.image }}">
+            <br/><center><img border="0" height="150" src="/img/posts/{{ post.image }}" alt="{{ post.image }}"></center>
         </a>
       </div>
 	  <div class="col-md-8">
