--- a/demo.html
+++ b/demo.html
@@ -6,8 +6,8 @@ layout: layout
   </div>
   <div class="col-md-3">
 	<p><center>
-	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com:8080/dashboard/Rails?days=5" role="button">
-	<span class="glyphicon glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts</a>
+	<a class="btn btn-success btn-lg" href="http://gitcharts.briskat.com/dashboard/rails%20(rails)?days=5" role="button">
+	<span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Try Gitcharts</a>
 	</center></p>
   </div>
   <div class="col-md-3">
