Change front page

--- a/index.html
+++ b/index.html
@@ -2,20 +2,40 @@
 layout: layout
 ---
 
-<br/>
+<section id="APPS">
 <div class="row">
-	<div class="col-md-1"></div>
-	<div class="col-md-10">
+	<div class="col-md-12">
+		<center><h1><font size="200%">LIVE ANALYTICS</font></h1></center>
 	</div>
 </div>
-<div class="row">
-<center>
-<h1><font size="200%">TURN YOUR DATA INTO KNOWLEDGE</font></h1>
-	<center>
-	Even small companies can now use the benefits of highly sophisticated analytics to empower their business.<br/> And they can also give an extra knowledge to their online users coming on their site in millions.
-	</center><br/>
-</center>
-<br/>
+<div class="row text-center">
+	<div class="col-md-6">
+			<h2>Git Analytics</h2>
+			<p><i>Explore your code changes</i></p>
+			<a href="http://gcharts.briskat.com">
+			<img src="img/commits.png" class="img-responsive center-block" alt="software project analytics"></a>
+			<p><a class="btn btn-success btn-lg" href="http://gcharts.briskat.com" role="button">Try git analytics</a>
+			</p>
+	</div>
+	<div class="col-md-6">
+			<h2>House Analytics</h2>
+			<p><i>Explore real property prices in any postcode</i></p>
+			<a href="http://house.briskat.com">
+			<img src="img/house.png" class="img-responsive center-block" alt="house analytics"></a>
+			<p><a class="btn btn-success btn-lg" href="http://house.briskat.com" role="button">Try house analytics</a>
+			</p>
+	</div>
+</div>
+<div class="row text-center">
+<h3>What users say about house analytics</h3>
+<h4><i>"Nice data set and analytics on English house prices"</i>, <a href="https://twitter.com/barryhand">@barryhand</a></h4>
+<h4><i>"Great site - be good to know the last sale date in the database"</i>, <a href="https://twitter.com/barryhand">@ianmiell</a></h4>
+<h4><i>"House buyers in England, here's a depressing site that shows you how much prices have changed"</i>, <a href="https://twitter.com/barryhand">@tarasyoung</a></h4>
+<!-- <h4><i>"Mit ty data z Brna, tak si nad tim projektem rovnou vyhonim, ..."</i>, Vlasta Holer</h4> -->
+</div>
+</section>
+<div class="row text-center">
+<h1><font size="200%">OUR BENEFITS</font></h1>
 </div>
 <div class="row">
 	<div class="col-md-4">
@@ -25,15 +45,16 @@ layout: layout
 	</div>
 	<div class="col-md-4">
 		<center><img src="img/fast.png" class="img-responsive" alt="superfast" width="142" height="88">
-		<h3>superfast</h3>
+		<h3>instant responses for all users</h3>
 		</center><br/>
 	</div>
 	<div class="col-md-4">
 		<center><img src="img/flexible.png" class="img-responsive" alt="flexible" width="365" height="88">
-		<h3>flexible</h3>
+		<h3>all kind of analytics</h3>
 		</center><br/>
 	</div>
 </div>
+<br/>
 <div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
 <div class="row">
 <center>
@@ -80,10 +101,9 @@ Analytics for websites with high traffic.
 </section>
 <div class="row">
 	<div class="col-md-8">
-		<p><i>Our core product is MIA DB (multi-user interactive analytic database). By design it's in-memory scalable
-		columnar OLAP database suitable for the <b>cloud environments</b>.
+		<p><i>At heart of our analytical service is MIA DB (multi-user interactive analytic database). On top of it instant analytic applications can be built. By design the database is in-memory scalable columnar OLAP database suitable for the <b>cloud environments</b>.
 		There are <b>minimum hardware requirements</b> and it can run
-		on any <b>common x86-64 compatible</b> server.</i></p>
+		on any <b>common x86-64 compatible</b> server.</i> It's implemented in Erlang and C.</p>
 	</div>
 	<div class="col-md-4"><br/><center><img class="img-responsive" src="img/RAM.png" alt="RAM" width="200" height="134"></center></div>
 </div>
@@ -131,37 +151,43 @@ Analytics for websites with high traffic.
 <div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
 
 <section id="CONTACT">
-<div class="row">
+<div class="row text-center">
 	<div class="col-md-4">
-	<center>
 		<h1>CONTACT US</h1>
+	</div>
+	<div class="col-md-4">
 		<h3><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
 		ask&commat;<img src="img/logo-s.png" alt="briskat" style="padding-bottom: 11px" width="110" height="58">.com
 		</h3>
-		<hr/>
-		<p>
+	</div>
+	<div class="col-md-4">
+		<br/>
 		<a href="https://www.facebook.com/pages/Briskat/521963701278696"><img src="img/facebook.jpg" alt="Briskat Facebook" width="30" height="30"></a>
 		<a href="https://www.twitter.com/thebriskat"><img src="img/twitter.png" alt="Briskat Twitter" width="30" height="30"></a>
 		<a href="https://www.linkedin.com/company/briskat"><img src="img/linkedin.png" alt="Briskat LinkedIn" width="30" height="30"></a>
 		&nbsp;<a href="https://www.youtube.com/user/thebriskat"><img src="img/youtube.png" alt="Briskat YouTube" width="72" height="30"></a>
-		</p>
-		<hr/>
-	</center>
+	</div>
+</div>
+
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+
+<div class="row text-center">
+	<div class="col-md-4">
+		<h1>OUR STORY</h1>
+		  <br/><iframe class="embed-responsive-item" src="http://www.youtube.com/embed/Dp5jRJPFOiA?showinfo=0&rel=0&autohide=1" style="border: 3px solid #aaa;" allowfullscreen></iframe>
 	</div>
 	<div class="col-md-8">
-		<center><h1>FOUNDERS</h1></center>
+		<h1>FOUNDERS</h1>
 	<div class="col-md-6">
-	<center><h2>
+	<h2>
 	<a href="https://www.linkedin.com/pub/vladimir-makovsky/2a/141/141"><img src="img/linkedin.png" alt="Vlada" width="20" height="20"></a>
 	Vladimir Makovsky<small>, CEO</small></h2>
-	<img class="img-responsive" src="img/vlada.png" alt="Vlada" width="183" height="225"><br/>
-	</center>
+	<center><img class="img-responsive" src="img/vlada.png" alt="Vlada" width="183" height="225"><br/><center>
 	</div>
 	<div class="col-md-6">
-	<center><h2>
+	<h2>
 	<a href="https://www.linkedin.com/in/hynekvychodil"><img src="img/linkedin.png" alt="Hynek" width="20" height="20"></a>
-	Hynek Vychodil<small>, CTO</small></h2><img class="img-responsive" src="img/hynek.png" alt="Hynek" width="183" height="225"><br/>
-	</center>
+	Hynek Vychodil<small>, CTO</small></h2><center><img class="img-responsive" src="img/hynek.png" alt="Hynek" width="183" height="225"><br/></center>
 	</div>
 	</div>
 </div>
