Add blog site ontoplist.com URL

--- a/blog.html
+++ b/blog.html
@@ -18,4 +18,7 @@ layout: layout
 </div>
 <hr/>
 {% endfor %}
+<div class="row text-center">
+<a href="http://www.ontoplist.com/" target="_blank"><img src="http://www.ontoplist.com/images/ontoplist32.png?id=55a75fd068977" alt="Blog Directory & Business Pages - OnToplist.com" border="0" /></a>
+</div>
 {% include disqus.js %}
