--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ layout: layout
 			</p>
 	</div>
 </div>
+<div class="row text-center">
+<h3>What users say about house analytics</h3>
+<h4><i>"mit ty data z Brna, tak si nad tim projektem rovnou vyhonim"</i> (uzivatel si preje zustat v anonymite)</h4>
+</div>
 </section>
 <div class="row text-center">
 <h1><font size="200%">OUR BENEFITS</font></h1>
