Change the front page

--- a/index.html
+++ b/index.html
@@ -4,147 +4,87 @@ layout: layout
 
 <section id="APPS">
 <div class="row">
-	<div class="col-md-12">
-		<center><h1><font size="200%">LIVE ANALYTICS</font></h1></center>
-	</div>
+       <div class="col-md-12">
+               <center><h1><font size="200%">LIVE ANALYTICS</font></h1></center>
+       </div>
 </div>
 <div class="row text-center">
-	<div class="col-md-6">
-			<h2>Git Analytics</h2>
-			<p><i>Explore your code changes</i></p>
-			<a href="http://gcharts.briskat.com">
-			<img src="img/commits.png" class="img-responsive center-block" alt="software project analytics"></a>
-			<p><a class="btn btn-success btn-lg" href="http://gcharts.briskat.com" role="button">Try git analytics</a>
-			</p>
-	</div>
-	<div class="col-md-6">
-			<h2>House Analytics</h2>
-			<p><i>Explore real property prices in any postcode</i></p>
-			<a href="http://house.briskat.com">
-			<img src="img/house.png" class="img-responsive center-block" alt="house analytics"></a>
-			<p><a class="btn btn-success btn-lg" href="http://house.briskat.com" role="button">Try house analytics</a>
-			</p>
-	</div>
-</div>
-<div class="row text-center">
-<h3>What users say about house analytics</h3>
 <h4><i>"Nice data set and analytics on English house prices"</i>, <a href="https://twitter.com/barryhand">@barryhand</a></h4>
-<h4><i>"Great site - be good to know the last sale date in the database"</i>, <a href="https://twitter.com/barryhand">@ianmiell</a></h4>
-<h4><i>"House buyers in England, here's a depressing site that shows you how much prices have changed"</i>, <a href="https://twitter.com/barryhand">@tarasyoung</a></h4>
-<!-- <h4><i>"Mit ty data z Brna, tak si nad tim projektem rovnou vyhonim, ..."</i>, Vlasta Holer</h4> -->
 </div>
-</section>
 <div class="row text-center">
-<h1><font size="200%">OUR BENEFITS</font></h1>
+		<!-- <div class="col-md-6">
+				<h2>Git Analytics</h2>
+				<p><i>Explore your code changes</i></p>
+				<a href="http://gcharts.briskat.com">
+				<img src="img/commits.png" class="img-responsive center-block" alt="software project analytics"></a>
+				<p><a class="btn btn-success btn-lg" href="http://gcharts.briskat.com" role="button">Try git analytics</a>
+				</p>
+		</div> -->
+		<div class="col-md-6">
+				<p><a href="http://house.briskat.com">
+				<img src="img/house.png" class="img-responsive center-block" alt="house analytics"></a>
+				</p>
+				<p><b>Property prices development in the last 20 years</b></p>
+				<p><i>jQuery, Google Charts, Leaflet</i></p>
+		</div>
+		<div class="col-md-6">
+				<p><a href="/london_imap.html">
+				<img src="img/london_imap.png" class="img-responsive center-block" alt="London interactive map"></a>
+				</p>
+				<p><b>Interactive map of property sales in London</b></p>
+				<p><i>Read tutorial on <a href="http://datamatic.co/page/how-to-create-an-interactive-data-analytic-map" target="_blank">datamatic.co</a></i></p>
+		</div>
+</div>
+<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
+</section>
+<section id="TECHNOLOGY">
+<div class="row text-center">
+	<div class="col-md-offset-3 col-md-6">
+	<h1><font size="200%">TECHNOLOGY</font></h1>
+	<p><i>We develop analytic service. Our service is powered by own in-memory database designed for high throughput and low latency responses.
+	On top of our service, Web 2.0 analytic applications can be built.</i></p>
+	</div>
 </div>
 <div class="row">
+	<div class="col-md-4">
+		<center><img src="img/fast.png" class="img-responsive" alt="superfast" width="142" height="88">
+		<h3>responses are instant</h3>
+		We allow <b>ad-hoc</b> queries on data with <b>millions of rows</b> an yet each user gets <b>sub-second responses</b>.
+		Such a speed is necessary for a good user experience. 
+		</center>
+	</div>
 	<div class="col-md-4">
 		<center><img src="img/everyone.png" class="img-responsive" alt="everyone" width="131" height="88">
 		<h3>everyone can explore</h3>
-		</center><br/>
+		Our service scales well in a number of concurrent users. <b>Millions of users</b> can use our service daily.
+		</center>
 	</div>
 	<div class="col-md-4">
-		<center><img src="img/fast.png" class="img-responsive" alt="superfast" width="142" height="88">
-		<h3>instant responses for all users</h3>
+		<center><img src="img/lemon.png"  alt="simple ui" width="104" height="88">
+		<h3>building web UI is easier</h3>
+		 Instant responses simplify UI client design and service API. It means less (complicated) code and a faster application development.
 		</center><br/>
 	</div>
-	<div class="col-md-4">
-		<center><img src="img/flexible.png" class="img-responsive" alt="flexible" width="365" height="88">
+</div>
+<div class="row">
+	<div class="col-md-offset-2 col-md-4">
+		<center><img src="img/flexible.png" alt="flexible" width="365" height="88">
 		<h3>all kind of analytics</h3>
+		Our service allows to serve thousands of (different) data schemas. We allow to query any structured data - eg. various kind of retail data, business insights, government open data,... 
 		</center><br/>
 	</div>
+	<div class="col-md-4">
+		<center><img src="img/dollar.png" alt="flexible" width="95" height="88">
+		<h3>scalable analytics is affordable</h3>
+		Our backend service is designed to maximize utilization of common hardware
+		which allows us to make scalable analytics affordable even to small companies.
+	</div>
 </div>
 <br/>
-<div class="row"><div class="col-lg-12"><h3 class="page-header"></h3></div></div>
-<div class="row">
-<center>
-<h1><font size="200%">HOW IT WORKS</font></h1>
-</center>
-<br/>
-</div>
-<div class="row">
-	<div class="col-md-4">
-		<center>
-		<img src="img/integrate.png" class="img-responsive" alt="Integrate">
-		<h3>integrate</h3>
-		</center>
-	</div>
-	<div class="col-md-4">
-		<center>
-		<img src="img/dashboard.png" class="img-responsive" alt="Insights">
-		<h3>add insights</h3>
-		</center>
-	</div>
-	<div class="col-md-4">
-		<center>
-		<img src="img/glass.png" class="img-responsive" alt="Explore">
-		<h3>explore</h3>
-		</center>
-	</div>
-</div>
-<!-- Retail Insights
-How it works. Website with a lot of structured data and a lot of users.
-You want to attract more visitors and provide them insights into your business.
-Attract more visitors.
-Grow your customer base
-<p>You can add <i>custom</i> and <i>interactive analytics</i>. You
-can serve big amount of data and high number of concurrent users at the same time.
-Analytics for websites with high traffic.
--->
-<br/>
-<section id="TECHNOLOGY">
-<div class="row">
-	<div class="col-md-12">
-		<center><h1><font size="200%">TECHNOLOGY</font></h1></center>
-	</div>
-</div>
-</section>
-<div class="row">
-	<div class="col-md-8">
-		<p><i>At heart of our analytical service is MIA DB (multi-user interactive analytic database). On top of it instant analytic applications can be built. By design the database is in-memory scalable columnar OLAP database suitable for the <b>cloud environments</b>.
-		There are <b>minimum hardware requirements</b> and it can run
-		on any <b>common x86-64 compatible</b> server.</i> It's implemented in Erlang and C.</p>
-	</div>
-	<div class="col-md-4"><br/><center><img class="img-responsive" src="img/RAM.png" alt="RAM" width="200" height="134"></center></div>
-</div>
-<div class="row">
-	<div class="col-md-4">
-		<h2>Low Latency &amp; High Throughput</h2>
-		<p>MIA DB uses the best <b>features</b> of the <b>new generation</b> OLAP databases
-		e.g. lock-free and columnar architecture, compression, vector operations.
-		More importantly it is <b>optimized</b> for <b>high throughput and low latency</b> which requires
-		very different architecture. For this purpose, we combined concepts from outside
-		world ( e.g. Git, Dropbox, Erlang ) with our previous experience in OLAP industry.
-		E.g. on ordinary laptop, we can serve up to 100 million user queries/day.
-		</p>
-	</div>
-	<div class="col-md-4">
-		<h2>Microcaching</h2>
-		<p>
-		Our main technological difference is <b>automatic microcaching</b>.
-		It increases throughput for concurrent users several times comparing
-		to traditional databases and allows to minimize
-		the latencies for the vast majority of user requests.
-		This is especially important for the usage in the <b>cloud</b> environments.
-		And for the <b>interactive</b> user experience.
-		Microcaching also slightly simplifies UI client and API by
-		allowing the client to make <b>synchronous requests only</b>.
-		</p>
-	</div>
-	<div class="col-md-4">
-		<h2>Flexible & Affordable</h2>
-		<p>High throughput and low latency allow to <b>simplify the overall architecture</b>
-		of the <b>whole OLAP system</b>. You can avoid custom layers of specialized caches
-		which are necessary for fast system. Custom caches make the <b>architecture complex,
-		weaken the flexibility</b> of the system and <b>remarkably increases the total cost</b> of the solution.
-		MIA DB works on common hardware and decreases implementation and operating cost.
-		</p>
-	</div>
-</div>
 
 <div class="row">
 	<center>
-	<a class="btn btn-info btn-lg" href="http://www.briskat.com/blog.html" role="button">
+	<a class="btn btn-success btn-lg" href="http://www.briskat.com/blog.html" role="button">
 	<span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Read Our Blog </a>
 	</center>
 </div>
